crates/procenv/tests/compile_fail/tuple_struct_not_supported.rs
//! Test: EnvConfig cannot be derived on tuple structs

use procenv::EnvConfig;

#[derive(EnvConfig)]
struct Config(String, u16);

fn main() {}
